[package]
name = "nucleaze"
version = "1.3.0"
edition = "2024"
description = "Read filtering using k-mers."
license = "MIT"
repository = "https://github.com/jackdougle/nucleaze"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
needletail = "0.6.3"
rustc-hash = "2.1.1"
rayon = "1.11.0"
bincode = "2.0.1"
num_cpus = "1.17.0"
sysinfo = "0.37.0"
libc = "0.2.178"
tempfile = "3.23.0"
rand = "0.9.2"
predicates = "3.1.3"
assert_cmd = "2.0.17"
rlimit = "0.10.2"
